--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TWITCH_CLIENT_ID=
+TWITCH_CLIENT_SECRET=
+IGDB_CACHE_LIFETIME=
+IGDB_WEBHOOK_SECRET=
